force-app/main/default/objects/Account/fields/Total_Unallocated_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Unallocated_Payments__c</fullName>
    <label>Total Unallocated Payments</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Used in Trade</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>