force-app/main/default/objects/Account/fields/Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Trading_Name__c</fullName>
    <description>Trading or DBA name for the account from onboarding.</description>
    <label>Trading Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>