force-app/main/default/objects/Account/fields/Typical_Trade_Size__c.field-meta.xml
<CustomField>
    <fullName>Typical_Trade_Size__c</fullName>
    <label>Typical Trade Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>