force-app/main/default/objects/Account/fields/Welcome_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-ticked by AccountStatusHandler when the welcome email is sent to the client.</description>
    <label>Welcome Email Sent</label>
    <type>Checkbox</type>
</CustomField>