force-app/main/default/objects/Account/recordTypes/Private_Individual.recordType-meta.xml
<RecordType>
    <fullName>Private_Individual</fullName>
    <active>true</active>
    <label>Private Individual</label>
</RecordType>