force-app/main/default/objects/Account/validationRules/Compliance_Approval_Required_Coded.validationRule-meta.xml
<ValidationRule>
    <fullName>Compliance_Approval_Required_Coded</fullName>
    <active>true</active>
    <description>Blocks stage transition to Client Coded unless Compliance Approved is ticked</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Stage__c, &quot;Client coded&quot;),
    NOT(Compliance_Approved__c)
)</errorConditionFormula>
    <errorDisplayField>Stage__c</errorDisplayField>
    <errorMessage>Cannot move to Client Coded — Compliance Approved must be ticked first. Please contact the compliance team.</errorMessage>
</ValidationRule>