force-app/main/default/objects/Account/listViews/Corporate_Accounts.listView-meta.xml
<ListView>
    <fullName>Corporate_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Client_Code__c</columns>
    <columns>Email_for_Notifications__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Corporate</value>
    </filters>
    <label>Corporate Accounts</label>
</ListView>