force-app/main/default/objects/Account/listViews/Person_Accounts.listView-meta.xml
<ListView>
    <fullName>Person_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Client_Code__c</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <label>Person Accounts</label>
</ListView>